force-app/main/default/objects/Course_Checklist_Item__c/Course_Checklist_Item__c.object-meta.xml
<CustomObject>
    <label>Course Checklist Item</label>
    <nameField>
        <displayFormat>CCI-{0000}</displayFormat>
        <label>Course Checklist Item Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Course Checklist Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>