force-app/main/default/objects/Course_Checklist_Item__c/fields/Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Activity_Type__c</fullName>
    <label>Activity Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Quiz</fullName>
            </value>
            <value>
                <fullName>Individual Assignment</fullName>
            </value>
            <value>
                <fullName>Homework</fullName>
            </value>
            <value>
                <fullName>Case Study</fullName>
            </value>
            <value>
                <fullName>Simulation</fullName>
            </value>
            <value>
                <fullName>Survey</fullName>
            </value>
            <value>
                <fullName>Blog</fullName>
            </value>
            <value>
                <fullName>Poll</fullName>
            </value>
            <value>
                <fullName>Reflection</fullName>
            </value>
            <value>
                <fullName>Group Assignment</fullName>
            </value>
            <value>
                <fullName>Peer Assessment/Feedback</fullName>
            </value>
            <value>
                <fullName>MidTerm</fullName>
            </value>
            <value>
                <fullName>Final</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>