force-app/main/default/objects/Course_Checklist_Item__c/fields/AIC_Component_Closure__c.field-meta.xml
<CustomField>
    <fullName>AIC_Component_Closure__c</fullName>
    <label>AIC Component Closure</label>
    <type>Date</type>
</CustomField>