force-app/main/default/objects/Course_Checklist_Item__c/fields/Assigned_To__c.field-meta.xml
<CustomField>
    <fullName>Assigned_To__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Grading Distribution / AA Responsible</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Course_Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>