force-app/main/default/objects/Course_Checklist_Item__c/fields/Course_Checklist__c.field-meta.xml
<CustomField>
    <fullName>Course_Checklist__c</fullName>
    <label>Course Checklist</label>
    <referenceTo>Course_Checklist__c</referenceTo>
    <relationshipLabel>Course Checklist Items</relationshipLabel>
    <relationshipName>Course_Checklist_Items</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>