force-app/main/default/objects/Course_Checklist_Item__c/fields/Course_Checklist_Item_Template__c.field-meta.xml
<CustomField>
    <fullName>Course_Checklist_Item_Template__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Checklist Item Template</label>
    <referenceTo>Course_Checklist_Item_Template__c</referenceTo>
    <relationshipLabel>Course Checklist Items</relationshipLabel>
    <relationshipName>Course_Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>