force-app/main/default/objects/Course_Checklist_Item__c/fields/Course_Offering__c.field-meta.xml
<CustomField>
    <fullName>Course_Offering__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Course Offering</label>
    <referenceTo>CourseOffering</referenceTo>
    <relationshipLabel>Course Checklist Items</relationshipLabel>
    <relationshipName>Course_Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>