force-app/main/default/objects/Course_Checklist_Item__c/fields/Courses__c.field-meta.xml
<CustomField>
    <fullName>Courses__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Courses</label>
    <referenceTo>LearningCourse</referenceTo>
    <relationshipLabel>Course Checklist Items</relationshipLabel>
    <relationshipName>Course_Checklist_Items</relationshipName>
    <type>Lookup</type>
</CustomField>