force-app/main/default/objects/Course_Checklist_Item__c/fields/Delay__c.field-meta.xml
<CustomField>
    <fullName>Delay__c</fullName>
    <formula>IF(
    AND(
        NOT(ISBLANK(Submission_Date__c)),
        NOT(ISBLANK(Due_Date__c)),
        Submission_Date__c &gt; Due_Date__c
    ),
    Submission_Date__c - Due_Date__c,
    0
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Delay</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>