force-app/main/default/objects/Course_Checklist_Item__c/fields/Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Due_Date__c</fullName>
    <label>Planned Completion</label>
    <type>Date</type>
</CustomField>