force-app/main/default/objects/Course_Checklist_Item__c/fields/Group_Individual__c.field-meta.xml
<CustomField>
    <fullName>Group_Individual__c</fullName>
    <label>Group / Individual</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Group</fullName>
            </value>
            <value>
                <fullName>Individual</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>