force-app/main/default/objects/Course_Checklist_Item__c/fields/How_was_the_Grading_done__c.field-meta.xml
<CustomField>
    <fullName>How_was_the_Grading_done__c</fullName>
    <label>Grading Medium</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Softcopy</fullName>
            </value>
            <value>
                <fullName>Hardcopy</fullName>
            </value>
            <value>
                <fullName>Autograded</fullName>
            </value>
            <value>
                <fullName>LMS</fullName>
            </value>
            <value>
                <fullName>Excel</fullName>
            </value>
            <value>
                <fullName>Faculty Graded</fullName>
            </value>
            <value>
                <fullName>External Grading</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>