force-app/main/default/objects/Course_Checklist_Item__c/fields/In_Class__c.field-meta.xml
<CustomField>
    <fullName>In_Class__c</fullName>
    <defaultValue>false</defaultValue>
    <label>In Class</label>
    <type>Checkbox</type>
</CustomField>