force-app/main/default/objects/Course_Checklist_Item__c/fields/LMS_Upload_Completed_Date__c.field-meta.xml
<CustomField>
    <fullName>LMS_Upload_Completed_Date__c</fullName>
    <label>Upload Final Marks to LMS / Completed</label>
    <type>Date</type>
</CustomField>