force-app/main/default/objects/Course_Checklist_Item__c/fields/MS_List_Completed_by__c.field-meta.xml
<CustomField>
    <fullName>MS_List_Completed_by__c</fullName>
    <label>MS List Completed by</label>
    <type>Date</type>
</CustomField>