force-app/main/default/objects/Course_Checklist_Item__c/fields/Planned_Completion_Date__c.field-meta.xml
<CustomField>
    <fullName>Planned_Completion_Date__c</fullName>
    <label>Planned to release marks to students by</label>
    <type>Date</type>
</CustomField>