force-app/main/default/objects/Course_Checklist_Item__c/fields/Submission_Date__c.field-meta.xml
<CustomField>
    <fullName>Submission_Date__c</fullName>
    <label>Completed Date</label>
    <type>Date</type>
</CustomField>