force-app/main/default/objects/Course_Checklist_Item__c/fields/Submission_Medium__c.field-meta.xml
<CustomField>
    <fullName>Submission_Medium__c</fullName>
    <label>Submission Medium</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hardcopy</fullName>
            </value>
            <value>
                <fullName>LMS</fullName>
            </value>
            <value>
                <fullName>External platform</fullName>
            </value>
            <value>
                <fullName>Live</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>