force-app/main/default/objects/Course_Checklist_Item__c/fields/Weightage__c.field-meta.xml
<CustomField>
    <fullName>Weightage__c</fullName>
    <label>Weightage (%)</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>