force-app/main/default/objects/Course_Checklist_Item__c/recordTypes/Outgoing_Exchange_Checklist.recordType-meta.xml
<RecordType>
    <fullName>Outgoing_Exchange_Checklist</fullName>
    <active>true</active>
    <description>Checklist items for Outgoing Exchange Cases</description>
    <label>Outgoing Exchange Checklist</label>
</RecordType>