force-app/main/default/objects/Course_Checklist_Item__c/recordTypes/Student_Checklist.recordType-meta.xml
<RecordType>
    <fullName>Student_Checklist</fullName>
    <active>true</active>
    <description>Checklist Item for Student Checklist</description>
    <label>Student Checklist</label>
</RecordType>